<?xml version="1.0" encoding="utf-8"?>
<!-- /* ** Copyright 2010, The Android Open Source Project ** ** Licensed 
	under the Apache License, Version 2.0 (the "License"); ** you may not use 
	this file except in compliance with the License. ** You may obtain a copy 
	of the License at ** ** http://www.apache.org/licenses/LICENSE-2.0 ** ** 
	Unless required by applicable law or agreed to in writing, software ** distributed 
	under the License is distributed on an "AS IS" BASIS, ** WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. ** See the License 
	for the specific language governing permissions and ** limitations under 
	the License. */ -->
<resources>

	<!-- The name of the application. -->
	<string name="app_name">Searchable Dictionary</string>

	<!-- The label for use as a searchable item -->
	<string name="search_label">Dictionary</string>

	<!-- The hint text that appears in the search box. -->
	<string name="search_hint">Search the dictionary</string>

	<!-- The menu entry that invokes search. -->
	<string name="menu_search">Search</string>

	<!-- The menu entry that open new dictionary -->
	<string name="menu_add">Open Dictionary</string>

	<!-- The menu entry that open new dictionary from file -->
	<string name="menu_file">Open From File</string>

	<!-- The menu entry that open new dictionary from url -->
	<string name="menu_url">Open From Url</string>

	<!-- The menu entry that open new dictionary from existing example in raw 
		resourses -->
	<string name="menu_example">Open From Examples</string>

	<!-- The menu entry that refresh database -->
	<string name="menu_refresh">Update</string>

	<!-- The menu entry that refresh database -->
	<string name="menu_delete">Delete Current</string>

	<!-- The menu entry -->
	<string name="menu_more">More</string>
	
	<!-- The menu entry -->
	<string name="menu_exercise">Start exercise</string>

	<!-- The menu entry that provide operations with dictionary -->
	<string name="menu_dictionary">Dictionary</string>

	<!-- The description that will show up in the search settings for this source. -->
	<string name="settings_description">Definitions of words</string>

	<!-- General instructions in the main activity. -->
	<string name="search_instructions">Press the search key to look up a word</string>

	<!-- Shown above search results when we receive a search request. -->
	<plurals name="search_results">
		<item quantity="one">%1$d result for \"%2$s\": </item>
		<item quantity="other">%1$d results for \"%2$s\":</item>
	</plurals>

	<!-- Search failure message. -->
	<string name="no_results">No results found for \"%s\"</string>

	<!-- Show number words in dictionary. -->
	<string name="words_loaded">%1$d words are in dictionary</string>

	<!-- Show number words in dictionary that were deleted. -->
	<string name="words_deleted">%1$d words were deleted</string>

	<!-- Search failure message. -->
	<string name="dictionary_empty">No words. You can load more to application</string>

	<!-- Dialog status name -->
	<string name="dlg_load">Loading. Please wait...</string>

	<!-- Dialog status name -->
	<string name="dlg_delete">Deleting. Please wait...</string>

	<!-- Dialog name -->
	<string name="dlg_load_file_label">Enter filename to download</string>

	<!-- Dialog name -->
	<string name="dlg_load_url_label">Enter url to download</string>

	<!-- Button name -->
	<string name="btn_cancel">Cancel</string>
	
	<!-- Button name -->
	<string name="btn_check">Check</string>

	<!-- Button name -->
	<string name="btn_ok">Ok</string>

	<string name="html_word_desc">
		&lt;h1>%1$s&lt;/h1>
		&lt;i>%2$s&lt;/i>
		&lt;p>%3$s&lt;/p>
		&lt;p>
		&lt;small>&lt;i>%4$s&lt;/i>&lt;/small>
		&lt;/p>
	</string>
</resources>
