<!-- /* ** Copyright 2010, The Android Open Source Project ** ** Licensed 
	under the Apache License, Version 2.0 (the "License"); ** you may not use 
	this file except in compliance with the License. ** You may obtain a copy 
	of the License at ** ** http://www.apache.org/licenses/LICENSE-2.0 ** ** 
	Unless required by applicable law or agreed to in writing, software ** distributed 
	under the License is distributed on an "AS IS" BASIS, ** WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. ** See the License 
	for the specific language governing permissions and ** limitations under 
	the License. */ -->
<!-- Options Menu for SearchableActivity and WordActivity. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/search" android:title="@string/menu_search"
		android:icon="@drawable/ic_menu_search" />

	<item android:id="@+id/dictionary" android:title="@string/menu_dictionary"
		android:icon="@drawable/ic_menu_more">
		<!-- "open" submenu -->
		<menu xmlns:android="http://schemas.android.com/apk/res/android">
			<item android:id="@+id/file" android:title="@string/menu_file"/>
			<item android:id="@+id/url" android:title="@string/menu_url" />
			<item android:id="@+id/example" android:title="@string/menu_example" />
			<item android:id="@+id/delete" android:title="@string/menu_delete" />
		</menu>
	</item>

	<!-- <item android:id="@+id/refresh" android:title="@string/menu_refresh" -->
	<!-- android:icon="@drawable/ic_menu_refresh" /> -->
</menu>
